# CSE-396-Project-Group1

./: .gitmodules  Libraries  README.md  install-dependencies-fedora.sh  install-dependencies.sh  install-opencv.sh  makefile
Android App/BallTracker/: settings.gradle
CSE 396 Group1 Project Website/PortFolio-master/: index.html  styles.css
CSE396_Simulation/: .sconsign.dblite  SConstruct
CSE396_Simulation/Simulation/: 2-foot_Weighted_Companion_Cube_OBJ.obj.import  Scene.tscn  project.godot
CSE396_Simulation/Simulation/.import/: 2-foot_Weighted_Companion_Cube_OBJ.obj-b18b349ecafb2f7c6377bddeb511ac89.md5  2-foot_Weighted_Companion_Cube_OBJ.obj-b18b349ecafb2f7c6377bddeb511ac89.mesh
CSE396_Simulation/src/: cube.cpp  cube.h  cube.os  gdlibrary.cpp  gdlibrary.os
Communication/: common.h  http_server.cpp  http_server.h  makefile  server  websocket_client.cpp  websocket_client.h
DesktopApplication/: ball_bouncer_desktop  makefile
DesktopApplication/ball_bouncer/: Makefile  ball_bouncer.pro  ball_bouncer.pro.user.7013273  ball_bouncer.pro.user.e5368c3  ball_bouncer_en_US.ts  icon.qrc  main.cpp  mainwindow.h  mainwindow.ui
DesktopApplication/build-ball_bouncer-Desktop_Qt_5_14_2_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_qcircledrawingwidget.cpp  qrc_icon.cpp  ui_mainwindow.h
Image Processing/Ball Tracking/: CMakeLists.txt  main.cpp
ImageProcessing/: makefile
Simulation/BBSimulation/: NodeArms.tscn  export_presets.cfg  project.godot
Simulation/Yeni Oyun Projesi/: .pck  export_presets.cfg  project.godot  yuzey.fbx  yuzey.fbx.import
(+46 files in other folders)
